# hackhub

./: README.md
MedHive-Agent-main/MedHive-Agent-main/: README.md
MedHive-Agent-main/MedHive-Agent-main/backend/: Dockerfile  main.py  requirements.txt
MedHive-Agent-main/MedHive-Agent-main/frontend/: README.md  package-lock.json  package.json  pnpm-lock.yaml  start.bat
MedHive-FLServer-main/MedHive-FLServer-main/: .gitignore  LICENSE  README.md  db.txt  pyproject.toml  requirements.txt  test.py
MedHive-FLServer-main/MedHive-FLServer-main/clients/medhive/: CHANGELOG  LICENSE  README.rst  pyproject.toml
MedHive-FLServer-main/MedHive-FLServer-main/clients/medhive/src/medhive/: __main__.py  app.py  client_logic.py  data_utils.py
MedHive-FLServer-main/MedHive-FLServer-main/data/: data.csv
MedHive-FLServer-main/MedHive-FLServer-main/only_this_was_working/: __init__.py  client_app.py  server_app.py  task.py
MedHive-FLServer-main/MedHive-FLServer-main/server/: app.py
MedHive-FLServer-main/MedHive-FLServer-main/server/data/: data.csv
MedHive-FLServer-main/MedHive-FLServer-main/server/fl_server/: __init__.py  data_utils.py  database.py  fl_logic.py  logistic_regression.py  main.py
MedHive-Frontend-main/: README.md  next.config.js  next.config.ts  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tailwind.config.ts
MedHive-Frontend-main/public/: desktop.ini
MedHive-Frontend-main/src/: types.d.ts
MedHive-Frontend-main/src/app/: layout.tsx  (+4 more)
MedHive-ModelHive-main/MedHive-ModelHive-main/: README.md
MedHive-main/MedHive-main/: README.md  docker-compose.yml
(+159 files in other folders)
